# flc-data-core

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pull_request_closed_ci.yml  pull_request_opened.yml
flc_data_jobs/: hello_world.py
