[tool.poetry]
name = "flc-data-core"
version = "0.1.0"
description = ""
authors = ["FabioCaffarello <fabio.caffarello@gmail.com>"]
readme = "README.md"
packages = [{include = "flc_data_core"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
pre-commit = "2.17.0"

[build-system]
requires = [ "poetry-core==1.0.3" ]
build-backend = "poetry.core.masonry.api"
